<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/rootView"
    >
    <FrameLayout 
    	android:id="@+id/uiFL"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent">
		<SurfaceView
			android:id="@+id/gameCanvas"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
		/>
	    <RelativeLayout 
	    	android:id="@+id/main_ctls"
	    	android:layout_width="fill_parent"
	    	android:layout_height="fill_parent">
			<ImageView android:id="@+id/doom_iv" 
    			android:layout_width="fill_parent" 
    			android:layout_height="fill_parent" 
    			android:background="@drawable/doom"
    			android:visibility="visible"
    			android:layout_centerInParent="true"
    			android:focusableInTouchMode="true" 
    			android:focusable="true" 
    			android:adjustViewBounds="false"
    		/>
			<TextView
				android:id="@+id/t_chooseWad"
				android:layout_width="240dp"
				android:layout_height="wrap_content"
				android:text="@string/choose_wad"
				android:textStyle="bold"
				android:textSize="16dp">
			</TextView>
			<TextView
				android:id="@+id/t_arguments"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentTop="true"
				android:layout_alignParentRight="true"
				android:text="@string/extra_args"
				android:textStyle="bold"
				android:textSize="16dp" 
				android:visibility="visible">
			</TextView>
			<Spinner
				android:id="@+id/s_files"
				android:layout_width="240dp"
				android:layout_height="wrap_content"
				android:layout_below="@+id/t_chooseWad"
				android:layout_alignLeft="@+id/t_chooseWad"
				android:textColor="#FFFFFF"
				android:background="@drawable/custom_spinner">
			</Spinner>
			<EditText
				android:id="@+id/arguments"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text=""
				android:layout_toRightOf="@+id/s_files"
				android:layout_alignTop="@+id/s_files"
				android:textSize="16dp" 
				android:textColor="#FFFFFF"
				android:singleLine="true" 
				android:visibility="visible"
				android:background="@drawable/doom_button">
			</EditText>
			<TextView
				android:id="@+id/t_options"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_below="@+id/s_files"
				android:layout_marginTop="15dp"
				android:text="@string/engine_options"
				android:textStyle="bold"
				android:textSize="18dp">
			</TextView>
			<CheckBox
				android:id="@+id/fullscreen"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/fullscreen"
				android:layout_below="@+id/t_options"
				style="@style/PrBoomCheckBox">
			</CheckBox>
			<CheckBox
				android:id="@+id/sound"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/enable_sound"
				android:layout_alignTop="@+id/fullscreen"
				android:layout_toRightOf="@+id/fullscreen"
				style="@style/PrBoomCheckBox">
			</CheckBox>
			<CheckBox
				android:id="@+id/touch"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/touch_controls"
				android:layout_alignTop="@+id/fullscreen"
				android:layout_toRightOf="@+id/sound"
				style="@style/PrBoomCheckBox">
			</CheckBox>
			<Button
				android:id="@+id/install"
				android:layout_width="150dp"
				android:layout_height="wrap_content"
				android:text="@string/install_wads"
				android:layout_below="@+id/fullscreen"
				android:layout_toLeftOf="@+id/installSound"
				android:layout_marginTop="5dp"
				android:layout_marginRight="5dp"
				style="@style/PrBoomButton">
			</Button>
			<Button
				android:id="@+id/installSound"
				android:layout_width="160dp"
				android:layout_height="wrap_content"
				android:text="@string/install_sounds"
				android:layout_alignTop="@+id/install"
				android:layout_centerHorizontal="true"
				style="@style/PrBoomButton">
			</Button>
			<Button
				android:id="@+id/clean"
				android:layout_width="150dp"
				android:layout_height="wrap_content"
				android:text="@string/cleanup"
				android:layout_alignTop="@+id/install"
				android:layout_toRightOf="@+id/installSound"
				android:layout_marginLeft="5dp"
				style="@style/PrBoomButton">
			</Button>
			<Button
				android:id="@+id/help"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:text="@string/how_to"
				android:layout_alignParentLeft="true"
				android:layout_alignParentBottom="true"
				style="@style/PrBoomButton">
			</Button>
			<Button
				android:id="@+id/quit"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:text="@string/quit"
				android:layout_alignParentRight="true"
				android:layout_alignParentBottom="true"
				style="@style/PrBoomButton">
			</Button>
			<Button
				android:id="@+id/play"
				android:layout_width="200dp"
				android:layout_height="wrap_content"
				android:text="@string/play"
				android:layout_alignParentBottom="true"
				android:layout_centerHorizontal="true"
				style="@style/PrBoomButton">
			</Button>
		</RelativeLayout>
		<RelativeLayout
			android:id="@+id/gameControls"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:visibility="invisible">
			<ImageView 
				android:id="@+id/indicator"
	        	android:layout_width="wrap_content" 
	        	android:layout_height="wrap_content" 
	        	android:src="@drawable/dpadindicator_off"
	        	android:background="#00000000"
	        	android:layout_margin="0px"
				android:layout_alignParentTop="true"
				android:layout_alignParentLeft="true"
         	/>
	    	<ImageButton 
				android:id="@+id/vstick"
	        	android:layout_width="wrap_content" 
	        	android:layout_height="wrap_content" 
	        	android:src="@drawable/vstick"
	        	android:background="#00000000"
	        	android:layout_margin="0px"
				android:layout_alignParentBottom="true"
				android:layout_alignParentLeft="true"
	         />
	    	<ImageButton 
				android:id="@+id/open"
	        	android:layout_width="wrap_content" 
	        	android:layout_height="wrap_content" 
	        	android:src="@drawable/open"
	        	android:background="#00000000"
	        	android:layout_margin="0px"
				android:layout_alignParentBottom="true"
				android:layout_centerHorizontal="true"
	         	/>
	        <CheckedTextView 
	        	android:id="@+id/enableRun"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_alignParentBottom="true"
	        	android:layout_toLeftOf="@+id/vstick_lr"
	        	android:text="Run"
	        	android:textStyle="bold"
	        	android:textColor="#FFFFFF"
	        	android:textSize="22dp"
	        	android:checkMark="@drawable/custom_checkbox"
			/>
        	/>
	    	<ImageButton 
				android:id="@+id/vstick_lr"
	        	android:layout_width="wrap_content" 
	        	android:layout_height="wrap_content" 
	        	android:src="@drawable/vstick_lr"
	        	android:background="#00000000"
				android:layout_alignParentBottom="true"
				android:layout_alignParentRight="true"
	         />
	         <ImageButton
	         	android:id="@+id/weapon5"
	        	android:layout_width="wrap_content" 
	        	android:layout_height="wrap_content"
	        	android:src="@drawable/weapon_5"
	        	android:background="#00000000"
	        	android:layout_alignParentTop="true"
	        	android:layout_centerHorizontal="true"
	        	android:layout_margin="2dp"
	         />
	         <ImageButton
	         	android:id="@+id/weapon4"
	        	android:layout_width="wrap_content" 
	        	android:layout_height="wrap_content"
	        	android:src="@drawable/weapon_4"
	        	android:background="#00000000"
	        	android:layout_alignParentTop="true"
	        	android:layout_toLeftOf="@+id/weapon5"
	        	android:layout_margin="2dp"
	         />
	         <ImageButton
	         	android:id="@+id/weapon3"
	        	android:layout_width="wrap_content" 
	        	android:layout_height="wrap_content"
	        	android:src="@drawable/weapon_3"
	        	android:background="#00000000"
	        	android:layout_alignParentTop="true"
	        	android:layout_toLeftOf="@+id/weapon4"
	        	android:layout_margin="2dp"
	         />
	         <ImageButton
	         	android:id="@+id/weapon2"
	        	android:layout_width="wrap_content" 
	        	android:layout_height="wrap_content"
	        	android:src="@drawable/weapon_2"
	        	android:background="#00000000"
	        	android:layout_alignParentTop="true"
	        	android:layout_toLeftOf="@+id/weapon3"
	        	android:layout_margin="2dp"
	         />
	         <ImageButton
	         	android:id="@+id/weapon1"
	        	android:layout_width="wrap_content" 
	        	android:layout_height="wrap_content"
	        	android:src="@drawable/weapon_1"
	        	android:background="#00000000"
	        	android:layout_alignParentTop="true"
	        	android:layout_toLeftOf="@+id/weapon2"
	        	android:layout_margin="2dp"
	         />
	         <ImageButton
	         	android:id="@+id/weapon6"
	        	android:layout_width="wrap_content" 
	        	android:layout_height="wrap_content"
	        	android:src="@drawable/weapon_6"
	        	android:background="#00000000"
	        	android:layout_alignParentTop="true"
	        	android:layout_toRightOf="@+id/weapon5"
	        	android:layout_margin="2dp"
	         />
	         <ImageButton
	         	android:id="@+id/weapon7"
	        	android:layout_width="wrap_content" 
	        	android:layout_height="wrap_content"
	        	android:src="@drawable/weapon_7"
	        	android:background="#00000000"
	        	android:layout_alignParentTop="true"
	        	android:layout_toRightOf="@+id/weapon6"
	        	android:layout_margin="2dp"
	         />
	         <ImageButton
	         	android:id="@+id/weapon8"
	        	android:layout_width="wrap_content" 
	        	android:layout_height="wrap_content"
	        	android:src="@drawable/weapon_8"
	        	android:background="#00000000"
	        	android:layout_alignParentTop="true"
	        	android:layout_toRightOf="@+id/weapon7"
	        	android:layout_margin="2dp"
	         />
	         <ImageButton
	         	android:id="@+id/weapon9"
	        	android:layout_width="wrap_content" 
	        	android:layout_height="wrap_content"
	        	android:src="@drawable/weapon_9"
	        	android:background="#00000000"
	        	android:layout_alignParentTop="true"
	        	android:layout_toRightOf="@+id/weapon8"
	        	android:layout_margin="2dp"
	         />
	         <ImageButton
	         	android:id="@+id/no"
	        	android:layout_width="wrap_content" 
	        	android:layout_height="wrap_content"
	        	android:src="@drawable/no"
	        	android:background="#00000000"
	        	android:layout_alignParentTop="true"
	        	android:layout_alignParentRight="true"
	        	android:layout_margin="2dp"
	         />
	         <ImageButton
	         	android:id="@+id/yes"
	        	android:layout_width="wrap_content" 
	        	android:layout_height="wrap_content"
	        	android:src="@drawable/yes"
	        	android:background="#00000000"
	        	android:layout_alignParentTop="true"
	        	android:layout_toLeftOf="@+id/no"
	        	android:layout_margin="2dp"
	         />
	         <ImageButton
	         	android:id="@+id/map"
	        	android:layout_width="wrap_content" 
	        	android:layout_height="wrap_content"
	        	android:src="@drawable/map"
	        	android:background="#00000000"
	        	android:layout_alignParentTop="true"
	        	android:layout_toRightOf="@+id/indicator"
	        	android:layout_margin="2dp"
	         />
	         <ImageButton 
	         	android:id="@+id/fireButton"
	        	android:layout_width="wrap_content" 
	        	android:layout_height="wrap_content"
	        	android:src="@null"
	        	android:background="#00000000"
	        	android:layout_centerInParent="true"
	         />
			 <ImageView 
				android:id="@+id/multiTouchView"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
			 />
		</RelativeLayout>
	</FrameLayout>
</RelativeLayout>